--- a/home.css
+++ b/home.css
@@ -77,6 +77,7 @@ html{
     transition: .3s;
     box-shadow: 0 2px 4px rgb(0, 0, 0, .1);
     border: none;
+    cursor: pointer;
 }
 
 .btn{
@@ -90,6 +91,7 @@ html{
     margin-top: 1rem;
     transition: .3s;
     border: 1px solid #000;
+    cursor: pointer;
 }
 
 .dark{
@@ -100,6 +102,11 @@ html{
 
 .button:hover{
     background: var(--text-secondary-color);
+}
+
+.btn:hover{
+    color: var(--text-primary-color);
+    border: var(--text-primary-color) solid 1px;
 }
 
 
@@ -298,10 +305,26 @@ span{
 .header_wrap{
     width: 100%;
     background: transparent;
-    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+}
+
+/* TOP NAVBAR */
+.top_navbar{
+    display: flex;
+    justify-content: space-between;
+    color: var(--white-color);
+    margin: .75rem 1.5rem;
+}
+
+.top_right i{
+    padding: .5rem;
+}
+
+hr{
+    height: 1px;
+    background: var(--white-color);
+    margin-top: .3rem;
 }
 /* Navmenu */
-
 .nav_bar{
     height: 6rem;
     display: flex;
@@ -319,13 +342,13 @@ span{
     position: fixed;
     right: 0;
     top: 0; 
-    left: -535px;
-    width: 65%;
+    left: -1px;
+    width: 45%;
     height: 100vh;
-    padding-top: 7rem;
+    padding-top: 10rem;
     padding-left: 2rem;
     text-align: left;
-    background: var(--bg-secondary-color);
+    background: var(--card-secondary-color);
     transition: .5s;
     box-shadow: 0 2px 4px rgb(0, 0, 0, .1);
     z-index: 1;
@@ -360,6 +383,10 @@ span{
     border: var(--white-color) 1px solid;
 }
 
+.nav_item .nav_logo{
+    display: none;
+}
+
 .btn i{
     padding-right: .5rem;
 }
@@ -391,7 +418,7 @@ span{
 }
 
 .change .bar{
-    background-color: #000;
+    background-color: var(--text-primary-color);
 }
 
 .change #bar1{
@@ -414,7 +441,7 @@ span{
 
 /* show menu */
 .show-menu{
-    left: -1px;
+    left: -535px;
 }
 
 /* dropdown buttons and contents */
@@ -445,17 +472,17 @@ span{
 }
 
 .dropdown_contents{
-    /* display: inline-block; */
+    display: inline-block;
     position: fixed;
     right: 0;
     bottom: 0;
-    left: 110px;
+    left: 180px;
     width: 60%;
     height: 75vh;
     text-align: center;
-    background:  transparent;
+    background:  var(--card-secondary-color);
     transition: .5s;
-    box-shadow: 0 2px 4px rgb(0, 0, 0, .1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
 
@@ -555,7 +582,7 @@ span{
     grid-template-rows: minmax(100px, auto);
     max-width: 100vw;
     position: relative;
-    top: -7.5rem;
+    top: -10.5rem;
     z-index: -1;
 }
 
@@ -569,7 +596,7 @@ span{
 .banner_content {
     width: 70%;
     height: 100vh;
-    margin: 0 auto;
+    margin: 5rem auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -607,15 +634,20 @@ span{
         font-size: var(--font-mini);
         font-style: italic;
     }
-}
 
+    .banner_content{
+        width: 85%;
+    }
 
-
-@media (max-width: 767px) {
     .banner-content p {
-        font-size: var(--font-mini);
+        font-size:1.5rem;
+    }
+    
+    .banner_content h1{
+        font-size: var(--font-midi);
     }
 }
+
 
 .banner-content .btn {
     font-weight: normal;
