--- a/home.css
+++ b/home.css
@@ -564,9 +564,9 @@ hr{
         box-shadow: 0 2px 4px rgb(0, 0, 0, .1);
     }
 
-    .dropdown_menu{
-        /* margin-top: 2.5rem; */
-    }
+    /* .dropdown_menu{
+        margin-top: 2.5rem;
+    } */
 
 }
 
