--- a/home.css
+++ b/home.css
@@ -585,7 +585,7 @@ hr{
 
 .main_container{
     display: grid;
-    grid-template-columns: 100%;
+    grid-template-columns: 100vw;
     grid-template-rows: minmax(100px, auto);
     max-width: 100vw;
     position: relative;
@@ -617,7 +617,7 @@ hr{
 
 .banner_text{
     text-align: center;
-    padding-top: 1rem;
+    padding: 1rem;
     font-size: var(--mfont-reg);
 }
 
@@ -701,6 +701,10 @@ hr{
 
 .pd-top{
     padding-top: .75rem;
+}
+
+.event p{
+    padding: 0 1rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -806,8 +810,8 @@ hr{
 
 /* WORSHIP */
 .worship_section {
-    padding: 6rem 0;
-   margin-top: 3rem;
+    /* padding: 6rem 0; */
+   margin-top: 4rem;
     /* background: url(images/Subtract.svg); */
     /* padding-bottom: 100px;*/
     z-index: 1;
@@ -877,6 +881,10 @@ hr{
 }
 
 @media screen and (min-width: 768px) {
+    .worship_section{
+        padding: 5rem 0;
+    }
+
     .worship_content h3 {
         font-size: var(--font-reg);
         line-height: 1.7;
